<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">BLERP</string>
    <string name="app_title">BLE Relative Positioning</string>
    <string name="textView_1">High Frequency </string>
    <string name="textView_LF">Low Frequency </string>
    <string name="textView_2">ACCELEROMETER</string>
    <string name="textView_3">Acceleration_x </string>
    <string name="textView_4">Acceleration_y </string>
    <string name="textView_5">Acceleration_z </string>
    <string name="textView_6">MAGNETOMETERS</string>
    <string name="textView_7">MagneticField_x </string>
    <string name="textView_8">MagneticField_y </string>
    <string name="textView_9">MagneticField_z </string>
    <string name="textView_10">Orientation  </string>
    <string name="textView_11">Hz</string>
    <string name="textView_12"> -------- </string>
    <string name="G_units"> [m/s^2] </string>
    <string name="B_units"> [µT] </string>
    <string name="degrees_units"> deg </string>
    <string name="compass_image_description"> positioning compass image </string>
    <string name="edit_button_description"> edit frequency </string>
    <string name="play_button_description"> play tone </string>
    <string name="frequency_dialog_message">Audio frequency in Hz</string>
    <string name="timing_dialog_message">Audio duration in ms</string>
    <string name="edit_button">EDIT</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="title_devices">Devices</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="stopScan">Stop Scanning</string>
    <string name="action_BT">Bluetooth</string>
    <!-- Main -->

    <string name="server">Server</string>
    <string name="client">Client</string>

    <!-- Server -->

    <string name="bluetooth_server">Bluetooth Server</string>
    <string name="actions">Actions</string>
    <string name="send_timestamp">Send Timestamp</string>
    <string name="restart">Restart</string>

    <!-- Client -->

    <string name="bluetooth_client">Bluetooth Client</string>
    <string name="scanning">Scanning</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ble_servers">BLE Servers</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disonnect</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="request_timestamp">Request Timestamp</string>

    <!-- Logs -->

    <string name="logs">Logs</string>
    <string name="clear">Clear</string>




</resources>
