<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context="joannamazer.blerp.MainActivity">

    <ImageButton
        android:id="@+id/toggleButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorMediumGrey"
        android:contentDescription="@string/play_button_description"
        android:onClick="toggleSwitchStatus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/pointer"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/compass_image_description"
        android:src="@drawable/compass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launch_server_button" />


    <TextView
        android:id="@+id/textView_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:text="@string/textView_1"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView29"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toEndOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="144dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingHorizontal="2dp"
        android:paddingVertical="4dp"
        android:text="@string/textView_11"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/degrees_unit"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/frequencyVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingHorizontal="2dp"
        android:paddingVertical="4dp"
        android:text="@string/textView_12"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/textView30"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:text="@string/textView_10"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"
        android:paddingHorizontal="2dp"
        android:paddingVertical="4dp"
        android:text="@string/textView_12"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline8" />

    <TextView
        android:id="@+id/degrees_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"
        android:paddingHorizontal="2dp"
        android:paddingVertical="4dp"
        android:text="@string/degrees_units"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guideline5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="96dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp"
        android:text="@string/textView_LF"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_1"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toEndOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="2dp"
        android:paddingVertical="4dp"
        android:text="@string/textView_12"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/frequencyVal"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guideline8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="2dp"
        android:paddingVertical="4dp"
        android:text="@string/textView_11"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <Button
        android:id="@+id/launch_server_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/server"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/launch_client_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"
        android:text="@string/client"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />


</android.support.constraint.ConstraintLayout>

</layout>